[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/ArchitectsDaughter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GodetteVN/Core/SettingsScreen/settingMainBox.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/ArchitectsDaughter.ttf"

[sub_resource type="DynamicFont" id=4]
font_data = SubResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 1 )

[node name="settingMainBox" type="Control"]
margin_right = 1000.0
margin_bottom = 600.0
rect_min_size = Vector2( 1000, 600 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="effectBox" type="HBoxContainer" parent="."]
margin_left = 135.0
margin_top = 400.0
margin_right = 635.0
margin_bottom = 485.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="effectLabel" type="Label" parent="effectBox"]
margin_top = 14.0
margin_right = 293.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.203922, 0.211765, 0.666667, 1 )
text = "Sound Effect  "

[node name="effectSettings" type="VBoxContainer" parent="effectBox"]
margin_left = 297.0
margin_right = 500.0
margin_bottom = 85.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="effectVolume" type="Label" parent="effectBox/effectSettings"]
margin_right = 203.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.109804, 0.117647, 0.517647, 1 )
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="effectVolumeSlider" type="HSlider" parent="effectBox/effectSettings"]
margin_top = 35.0
margin_right = 203.0
margin_bottom = 51.0
min_value = -50.0
max_value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="autoBox" type="HBoxContainer" parent="."]
margin_left = 131.0
margin_top = 106.0
margin_right = 544.0
margin_bottom = 169.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="autoLabel" type="Label" parent="autoBox"]
margin_top = 3.0
margin_right = 253.0
margin_bottom = 60.0
rect_min_size = Vector2( 180, 35 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.203922, 0.211765, 0.666667, 1 )
text = "Auto Speed:  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="autoSpeed" type="OptionButton" parent="autoBox"]
margin_left = 257.0
margin_right = 357.0
margin_bottom = 63.0
rect_min_size = Vector2( 100, 40 )
theme = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.203922, 0.211765, 0.666667, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
toggle_mode = false
flat = true
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musicBox" type="HBoxContainer" parent="."]
margin_left = 134.579
margin_top = 320.0
margin_right = 634.579
margin_bottom = 405.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musicLabel" type="Label" parent="musicBox"]
margin_top = 14.0
margin_right = 296.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.203922, 0.211765, 0.666667, 1 )
text = "Music            "

[node name="musicSettings" type="VBoxContainer" parent="musicBox"]
margin_left = 300.0
margin_right = 500.0
margin_bottom = 85.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musicVolume" type="Label" parent="musicBox/musicSettings"]
margin_right = 200.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.109804, 0.117647, 0.517647, 1 )
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volumeSlider" type="HSlider" parent="musicBox/musicSettings"]
margin_top = 40.0
margin_right = 200.0
margin_bottom = 56.0
min_value = -50.0
max_value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voiceBox" type="HBoxContainer" parent="."]
margin_left = 133.519
margin_top = 480.0
margin_right = 633.519
margin_bottom = 565.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voiceLabel" type="Label" parent="voiceBox"]
margin_top = 14.0
margin_right = 293.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.203922, 0.211765, 0.666667, 1 )
text = "Voice            "

[node name="voiceSettings" type="VBoxContainer" parent="voiceBox"]
margin_left = 297.0
margin_right = 500.0
margin_bottom = 85.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voiceVolume" type="Label" parent="voiceBox/voiceSettings"]
margin_right = 203.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.109804, 0.117647, 0.517647, 1 )
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voiceSlider" type="HSlider" parent="voiceBox/voiceSettings"]
margin_top = 40.0
margin_right = 203.0
margin_bottom = 56.0
min_value = -50.0
max_value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="effectBox/effectSettings/effectVolumeSlider" to="." method="_on_effectVolumeSlider_value_changed"]
[connection signal="item_selected" from="autoBox/autoSpeed" to="." method="_on_autoSpeed_item_selected"]
[connection signal="value_changed" from="musicBox/musicSettings/volumeSlider" to="." method="_on_volumeSlider_value_changed"]
[connection signal="value_changed" from="voiceBox/voiceSettings/voiceSlider" to="." method="_on_voiceSlider_value_changed"]
